fix spinner (loading message only visible for accessibility devices)

--- a/public/css/demovox-public.scss
+++ b/public/css/demovox-public.scss
@@ -63,6 +63,10 @@
 			width: 100%;
 		}
 	}
+
+	.sr-only {
+		@include sr-only();
+	}
 }
 
 .errorTitle {
